[package]
name = "defmt-persist"
version = "0.1.0"
authors = ["Mathias Koch <mk@blackbird.online>"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"

[dependencies]
cortex-m = "0.6.3"
embedded-hal = { git = "https://github.com/MathiasKoch/embedded-hal", branch = "feature/alternative-storage" }
defmt = { git = "https://github.com/knurling-rs/defmt", branch = "main" }
bbqueue = "0.4.10"
nb = "*"
crc = { version = "1.8.1", default-features = false }
